# swagger.json
@@ -5,7 +5,7 @@
     "description": "Description",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "restume.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -58,13 +58,6 @@
         }
       }
     },
-    "/api-dcos": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
     "/resume-templates": {
       "get": {
         "description": "",
@@ -82,19 +75,31 @@
         }
       }
     },
-    "/feedback/": {
+    "/feedback/{resumeID}": {
       "get": {
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "resumeID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/feedback": {
       "post": {
         "description": "",
         "parameters": [
@@ -110,9 +115,6 @@
                 "resumeID": {
                   "example": "any"
                 },
-                "userID": {
-                  "example": "any"
-                },
                 "name": {
                   "example": "any"
                 }
@@ -126,6 +128,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -148,6 +153,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -168,6 +176,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
